pkg/renderer/template.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:struct", "struct")
#@ for comp in data.values.components:
#@ if/end comp.pre_deploy_script:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ dep.name
  annotations:
    kapp.k14s.io/change-group: #@ "{}.deployments".format(comp.name)
    #@ if comp.pre_deploy_script:
    kapp.k14s.io/change-rule.pre-deploy: #@ "upsert after upserting {}.pre-deploy".format(comp.name, dep.name)
    #@ end
    #@ if comp.dependencies:
    #@ for i, d in enumerate(comp.dependencies):
    #@ for stage in ["post-deploy", "deployments"]:
    #@ key = 'kapp.k14s.io/change-rule.{}-{}'.format(d, stage)
    #@yaml/text-templated-strings
    (@= key @): #@ "upsert after upserting {}.{}".format(d, stage)
    #@ end
    #@ end
    #@ end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #@ dep.name
  template:
    metadata:
      labels:
        app: #@ dep.name
    spec:
      containers:
      - name: #@ dep.name
        #@ if comp.image and not comp.skip_pull_image:
        image: #@ comp.image
        #@ else:
        image: #@ "docker.io/library/{}:dev".format(comp.name)
        imagePullPolicy: Never
        #@ end
        #@ if dep.command:
        command: #@ dep.command
        #@ end
        #@ if dep.port:
        port:
        - containerPort: #@ dep.port
        #@ end
        #@ if dep.env or comp.env:
        livenessProbe: #@ dep.livenessProbe
        #@ end
#@ if/end dep.port:
---
apiVersion: v1
kind: Service
metadata:
  name: #@ dep.name
  annotations:
    kapp.k14s.io/change-group: #@ "{}.deployments".format(comp.name)
    #@ if comp.pre_deploy_script:
    kapp.k14s.io/change-rule.pre-deploy: #@ "upsert after upserting {}.pre-deploy".format(comp.name)
    #@ end
    #@ if comp.dependencies:
    #@ for i, d in enumerate(comp.dependencies):
    #@ for stage in ["post-deploy", "deployments"]:
    #@ key = 'kapp.k14s.io/change-rule.{}-{}'.format(d, stage)
    #@yaml/text-templated-strings
    (@= key @): #@ "upsert after upserting {}.{}".format(d, stage)
    #@ end
    #@ end
    #@ end
spec:
  selector:
    app: #@ dep.name
  ports:
  - protocol: TCP
    #@ if dep.hostPort:
    port: #@ dep.hostPort
    targetPort: #@ dep.port
    #@ else:
    port: 80
    targetPort: #@ dep.port
    #@ end
  #@ if dep.hostPort:
  type: NodePort
  #@ else:
  type: ClusterIP
  #@ end
#@ end
#@ end
#@ if comp.post_deploy_script:
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ "ingress-for-{}".format(ing.host)
spec:
  rules:
  - host: #@ ing.host
    http:
      paths:
      #@ for path in ing.paths:
      - path: #@ path.path
        pathType: Prefix
        backend:
          service:
            name: #@ path.service
            port:
              number: 80
      #@ end
#@ end
